# AcornGM

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
resources/unix/: acorngm.desktop
resources/windows/: DO_NOT_TOUCH.txt
src/: default_file_paths.rs  global_messages.rs  main.rs  panic_catcher.rs  resources.rs  settings.rs  ui_templates.rs  updater.rs  utility.rs
src/scenes/: browser.rs  create_profile.rs  create_profile1.rs  create_profile2.rs  homepage.rs  login.rs  mod.rs  mod_details.rs  view_profile.rs
src/scenes/create_profile/: create_profile1.rs  create_profile2.rs
src/scenes/homepage/: homepage1.rs
src/scenes/login/: login1.rs
src/scenes/view_profile/: view_profile1.rs
