[package]
name = "UTMMFrontend"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
iced = { version = "0.12.1", features = ["image", "async-std", "advanced"] }
whoami = "1.6.0"
native-dialog = "0.7.0"
image = "0.24.9"
sha256 = "1.6.0"
dialog = "0.3.0"
uuid = { version = "1.16.0", features = ['v4'] }
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
webbrowser = "1.0.4"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
tokio = "1.44.1"
fast_image_resize = "5.1.3"
sha2 = "0.10.8"
cli-clipboard = "0.4.0"
