[package]
name = "UTMMFrontend"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
iced = { version = "0.12.1", features = ["image", "async-std", "advanced"] }
whoami = "1.6.0"
image = "0.24.9"
sha256 = "1.6.0"
uuid = { version = "1.16.0", features = ['v4'] }
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
webbrowser = "1.0.4"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
fast_image_resize = "5.1.3"
sha2 = "0.10.8"
biologischer-log = { path = "../rust-biologischer-log" }
#biologischer-log = { git = "https://github.com/BioTomateDE/rust-biologischer-log.git" }
log = "0.4"
once_cell = "1.21.3"
rfd = "0.15.3"
arboard = "3.3"
