[package]
name = "AcornGM"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }  # don't remove this thing fixes Command async error somehow
iced = { version = "0.12.1", features = ["image", "async-std", "advanced"] }
whoami = "1.6.0"
image = "0.24.9"
uuid = { version = "1.16.0", features = ['v4', 'serde'] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
webbrowser = "1.0.4"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
fast_image_resize = "5.1.3"
biologischer-log = { git = "https://github.com/BioTomateDE/rust-biologischer-log.git" }
log = "0.4"
once_cell = "1.21.3"
rfd = { version = "0.15.3", features = ["common-controls-v6", "xdg-portal"] }
rand = "0.9.1"
base64 = "0.22.1"
blake3 = "1.8.2"
copypasta = "0.10.2"
semver = "1.0.26"

[target.'cfg(unix)'.dependencies]
libc = "0.2.174"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_UI_Controls"] }

[package.metadata.appimage]
desktop_file = "resources/unix/acorngm.desktop"
icon = "resources/images/logo.png"
